--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,4 @@
-<html><head><base href="https://example.com/">
+<html><head><base href>
     <meta charset="UTF-8">
     <title>America Gerl Gym</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
